# YanFastApiAdmin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  auth.py  config.py  db.py
tests/: api_test.py
